# STCostAggregation

./: CMakeLists.txt  LICENSE  README.md
Src/: CMakeLists.txt  SegmentTree.cpp  SegmentTree.h  StereoDisparity.cpp  StereoDisparity.h  StereoHelper.cpp  StereoHelper.h  main.cpp
Test/: CMakeLists.txt  Test.cpp  config.h.in  evaluate.h
