cmake_minimum_required(VERSION 2.6)
SET(EXE_NAME STCostAggre)
SET(TEST_NAME ${EXE_NAME}Test)
SET(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})
SET(CMAKE_BUILD_TYPE Release)
IF(WIN32)
	SET(RUN_PATH ${EXE_NAME}.exe)
ENDIF(WIN32)
IF(UNIX)
	SET(RUN_PATH ./${EXE_NAME})
ENDIF(UNIX)
SET(ROOT_PATH ${PROJECT_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin/")

ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/Src")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/Test")

#ADD_CUSTOM_TARGET(install_after_all ALL 
#    COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}/cmake_install.cmake) 
#ADD_DEPENDENCIES(install_after_all ${EXE_NAME} ${TEST_NAME}) 

