PROJECT(STCostAggregation)
AUX_SOURCE_DIRECTORY(. SOURCE_FILES)
FILE(GLOB HEADER_FILES  *.h)
SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})

FIND_PACKAGE(OpenCV REQUIRED) 
ADD_EXECUTABLE(${EXE_NAME} ${SOURCE_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(${EXE_NAME}  ${OpenCV_LIBS})

#INSTALL (TARGETS ${EXE_NAME} DESTINATION bin)
